Remove `ForeignFunctions` option and enable foreign feature by default
Fix some error messages